footer fixes and other css fixes

--- a/app/design/frontend/creo_mobile/default/template/page/html/topmenu/customcategories.phtml
+++ b/app/design/frontend/creo_mobile/default/template/page/html/topmenu/customcategories.phtml
@@ -1,15 +1,15 @@
 <div class="container homepage_navigation_middle">
   <div class="panel-group" id="accordion">
   
-    <div class="panel panel-default">
+<!--     <div class="panel panel-default">
       <div class="panel-heading">
         <h4 class="panel-title">
-          <a  href="<?php echo $this->getUrl('');?>">
+          <a  href="<?php // echo $this->getUrl('');?>">
           Home</a>
         </h4>
       </div>
   
-    </div>
+    </div> -->
 		<?php
         $_helper = Mage::helper('catalog/category');
         $_categories = $_helper->getStoreCategories();
