--- a/skin/frontend/creo_mobile/default/style.css
+++ b/skin/frontend/creo_mobile/default/style.css
@@ -214,13 +214,12 @@ body.canvas-slid #disable_view{position: fixed;z-index: 9998;background-color: r
 #footer .links { position: relative; text-transform: uppercase; }
 #footer .links:before { background: #000; height: 24px; position: absolute; top: 0; left: 0; right: 15px; content: ''; }
 #footer .links:after { width: 0; height: 0; border-style: solid; border-width: 35px 13px 0 0; border-color: #fff transparent transparent; position: absolute; left: 0; top: 0; content: ''; }
-#footer .column.column1 { width: 140px; }
-#footer .column { float: left; width: 80px; margin: 0 10px 0 0; position: relative; }
-#footer .column h3 { color: #fff; text-transform: uppercase; margin: 0 0 5px; font: 16px/24px "Roboto Condensed", Helvetica, Arial, sans-serif; }
+#footer .column {width: 100%; margin: 0 10px 0 0; position: relative; }
+#footer .column h3 { color: #000; text-transform: uppercase; margin: 0 0 5px; font: 16px/24px "Roboto Condensed", Helvetica, Arial, sans-serif; }
 #footer .list { margin: 0; padding: 0; list-style: none; font: 12px/16px Arial, Helvetica, sans-serif; }
 #footer .list li { padding: 0 0 5px 15px; position: relative; }
 #footer .list li:before { position: absolute; left: 0; top: 6px; width: 3px; height: 3px; border-radius: 50%; background: #000; content: ''; }
-#footer .list a { color: #000; }
+#footer .list a { color: #fff; }
 #footer .bottom-area { position: relative; color: #fff; }
 #footer .bottom-area:before { background: #000; display: block; position: absolute; top: 0; bottom: 0; margin: 0 -9999px; padding: 0 9999px; content: ''; }
 #footer .footer-nav { overflow: hidden; }
@@ -733,10 +732,7 @@ border: 1px solid #959595; color: #000; background: none; cursor: pointer; font:
 #nav .featured-items .featured-products img { display: block; width: 100%; height: auto; }
 #nav .featured-items .featured-products .title { background: rgba(255, 255, 255, 0.8); position: absolute; bottom: 0; left: 0; right: 0; text-align: center; padding: 10px; color: #000; font: 12px/14px "Roboto Condensed", Helvetica, Arial, sans-serif; }
 #nav .featured-items .featured-products a:hover .title { background: #f16a79; text-decoration: none; color: #fff; }
-#footer { position: relative; padding: 30px 0; }
-#footer:before { background: #000; position: absolute; top: 0; bottom: 0; /*margin: 0 -9999px -9999px;
-	padding: 0 9999px 9999px;*/
-content: ''; width: 200%; left: -50%; }
+#footer {position:relative;padding:15px 0 5px;}
 .navmenu-fixed-left{background:#F3F3F5;display:none;}
 .floatmenu li a{display: block;color: rgb(240, 240, 240) !important;font-size:1.1em;font-weight:300;
 border-bottom: 1px solid rgb(61, 62, 66);padding: 1em;text-transform: uppercase;}
@@ -757,7 +753,7 @@ border-bottom: 1px solid rgb(61, 62, 66);padding: 1em;text-transform: uppercase;
 #footer .logo { width: 100%; margin: 0 0 8px; }
 #footer .copyright { display: block; color: #fff; font: 10px/12px "Roboto Condensed", Helvetica, Arial, sans-serif; }
 #footer .column ul { margin: 0; padding: 0; text-transform: uppercase; list-style: none; color: #fff; font: 10px/12px "Roboto Condensed", Helvetica, Arial, sans-serif; }
-#footer .column li a { color: #fff; }
+#footer .column li a { /*color: #fff;*/ }
 .scaffold-form .form-list { margin: 0; overflow: hidden; padding: 0; }
 .scaffold-form .form-list label { font-weight: normal; letter-spacing: 1px; }
 .scaffold-form .buttons-set .button { background: #f16167 none repeat scroll 0 0; border: medium none; color: #fff; height: 26px; padding: 5px 20px; }
@@ -1161,6 +1157,9 @@ border-color: transparent transparent transparent #000;
 .st-val { width: 49%; padding-left: 1%; }
 .pdc-design-view .buttons{position:relative;top:0;right:0;}
 .pdp-style .carousel-creo.carousel3{width:100%;}
+.footer_termsconditions {width: 100%; text-align: center; padding: 10px 0;background-color:#000;color:#fff;}
+#footer-accordion{margin-bottom:0;}
+
 /* RESPONSIVE EXAMPLE */
 .stacktable.large-only { display: table; }
 .stacktable.small-only { display: none; }
