--- a/skin/frontend/creo_mobile/default/style.css
+++ b/skin/frontend/creo_mobile/default/style.css
@@ -121,8 +121,9 @@ p.style1 { font-family: 'Roboto Condensed', sans-serif; font-size: 19px; color: 
 #header .col-xs-12,#header .col-xs-3{position:inherit;}
 .logo { display: block; width: auto; margin: 15px auto; max-width: 100px; }
 .logo img { display: block; width: 100%; height: auto; }
-.main-menu { height: 80px; }
-.main-menu .bgr-icon {font-size:30px;color:#ed5164;padding:6px 8px;border:1px solid #ed5164;top:18px;cursor:pointer;border-radius:0;}
+.main-menu{height:80px;position:relative;width:100%;}
+.main-menu .bgr-icon{font-size:30px;color:#ed5164;padding:6px 8px;border:1px solid #ed5164;top:18px;cursor:pointer;
+position:absolute;border-radius:0;left:5px;}
 .main-menu .main-menu-content { display: none;}
 .main-menu .main-menu-content #nav {position:absolute; top: 88px; left: 0; width: 100%; background-color: #fff; z-index: 555; }
 body.canvas-slid #disable_view{position: fixed;z-index: 9998;background-color: rgba(0, 0, 0, 0.35);height: 100%;width: 100%;display: block;}
@@ -1157,14 +1158,26 @@ border-color: transparent transparent transparent #000;
 .st-val { width: 49%; padding-left: 1%; }
 .pdc-design-view .buttons{position:relative;top:0;right:0;}
 .pdp-style .carousel-creo.carousel3{width:100%;}
-.footer_termsconditions {width: 100%; text-align: center; padding: 10px 0;background-color:#000;color:#fff;}
+.footer_termsconditions {width: 100%; text-align: center; padding:15px 0;background-color:#000;color:#fff;text-transform:uppercase;
+font-size:16px;}
 #footer-accordion{margin-bottom:0;}
-
+.footer_navigation .panel-heading,.footer_navigation .panel{border-radius:0;}
+.footer_navigation .panel-heading{color:#444;}
+.footer_navigation .panel-heading .panel-title{position:relative;}
+.footer_navigation .panel-heading .panel-title [aria-expanded="false"]:before,
+.footer_navigation .panel-heading .panel-title [aria-expanded="true"]:before{position:absolute;display:block;content:'+';width:20px;
+height:20px;right:0px;font-size:20px;font-family: arial;top:0;line-height:1;}
+.footer_navigation .panel-heading .panel-title [aria-expanded="true"]:before{content:'-';font-size:25px;top:-5px;}
+.footer_navigation .panel-heading .panel-title,.footer_navigation .panel-heading .panel-title a{font-size:18px;text-transform:uppercase;}
+.footer_navigation .panel-group .panel+.panel{margin-top:0;}
+.footer_navigation .panel-group .panel .panel-collapse ul{padding-left:0px;margin:0;}
+.footer_navigation .panel-group .panel .panel-collapse ul li a{padding:5px 15px;display:block;border-top:1px solid #ddd;font-size:14px;
+line-height:1.5;text-transform:uppercase;}
 /* RESPONSIVE EXAMPLE */
-.stacktable.large-only { display: table; }
-.stacktable.small-only { display: none; }
+.stacktable.large-only{display:table;}
+.stacktable.small-only{display:none;}
 
 @media (max-width: 800px) {
-  .stacktable.large-only { display: none; }
-  .stacktable.small-only { display: table; }
+.stacktable.large-only { display: none; }
+.stacktable.small-only { display: table; }
 }
