footer pages css changes for mobile done

--- a/skin/frontend/creo_mobile/default/css/custom.sami.css
+++ b/skin/frontend/creo_mobile/default/css/custom.sami.css
@@ -354,8 +354,7 @@ a.alignleft.checkout-items {
 }
 
 .form-holder.login-sec {
-    padding-bottom:20px;
-    padding-top:20px;
+    padding:20px 0;
 }
 
 #footer .list li {
