--- a/app/design/frontend/creo_mobile/default/template/page/html/topmenu/customcategories.phtml
+++ b/app/design/frontend/creo_mobile/default/template/page/html/topmenu/customcategories.phtml
@@ -1,6 +1,6 @@
 <div class="container homepage_navigation_middle">
-  <div class="panel-group" id="accordion">
-  
+<div class="row">
+<div class="panel-group" id="accordion">
 <!--     <div class="panel panel-default">
       <div class="panel-heading">
         <h4 class="panel-title">
@@ -62,30 +62,20 @@
           </a>
         </h4>
       </div>
-      
       <div id="collapse5" class="panel-collapse collapse">
         <a href="<?php echo Mage::getBaseUrl() . "collections/index/men" ?>">men</a>
         <a href="<?php echo Mage::getBaseUrl() . "collections/index/women" ?>">women</a>
       </div>
-      
-     
     </div>
     <?php
 		}
           } }
           ?>
-          
-	          
-  </div> 
+  </div>
 </div>
-    
+</div>
 </body>
 </html>
-
-
-
-
-
 
 <?php /*?><div class="homepage_categories">
 <ul class="root_categories">
