--- a/skin/frontend/creo_mobile/default/style.css
+++ b/skin/frontend/creo_mobile/default/style.css
@@ -243,6 +243,7 @@ body.canvas-slid #disable_view{position: fixed;z-index: 9998;background-color: r
 .modal-content .close:hover { color: #000; opacity: 1; }
 .modal-holder { transform: skewY(5deg); -moz-transform: skewY(5deg); -ms-transform: skewY(5deg); -webkit-transform: skewY(5deg); backface-visibility: hidden; text-align: center; color: #888; font: 16px/26px "Roboto Condensed", Helvetica, Arial, sans-serif; }
 .modal-holder h2 { margin: 0 0 10px; text-transform: uppercase; color: #222; font: 40px/42px "Roboto Condensed", Helvetica, Arial, sans-serif; }
+.modal-holder .btn-holder a,.modal-holder .btn-holder .btn-proceed-checkout{display:block;}
 .modal-holder p { margin: 0 0 10px; }
 .subscribe-form { display: block; margin: 0; padding: 0; background: none; border: none; }
 input[type="text"], input[type="password"], input.email { display: block; background: none; border: 1px solid #ddd; width: 100%; height: 28px; line-height: 20px; margin: 0 0 10px; padding: 4px 10px; text-align: left; }
@@ -345,7 +346,7 @@ margin: 0; text-transform: capitalize; color: #222; font: 13px/18px "Roboto Cond
 .products-grid .text-area h3 a { color: #222; }
 .products-grid .text-area .price { display: block; margin: 0 0 0 2%; color: #f16167; float: right; text-align: right; width: 33%; font: 13px/18px "Roboto Condensed", Helvetica, Arial, sans-serif; }
 .products-grid .btn-holder { overflow: hidden; text-align: center; clear: both; }
-.products-grid .btn-holder a { float: left; width: 70%; border: 4px solid #f16167; background: #f16167; text-transform: uppercase; color: #000; position: relative; font: bold 14px/24px Arial, Helvetica, sans-serif; }
+.products-grid .btn-holder a { float: left; width: 70%; border: 4px solid #f16167; background: #f16167; text-transform: uppercase; color: #000; position: relative; font: bold 12px/24px Arial, Helvetica, sans-serif; }
 .products-grid .btn-holder a:before { position: absolute; top: -4px; right: -24px; width: 0; height: 0; border-style: solid; border-width: 44px 20px 0 0; border-color: #f16167 transparent transparent; content: ''; }
 .products-grid .btn-holder a:first-child:before { display: none; }
 .products-grid .btn-holder a:hover:before { border-color: #000 transparent transparent; }
