--- a/skin/frontend/creo_mobile/default/style404.css
+++ b/skin/frontend/creo_mobile/default/style404.css
@@ -10,7 +10,11 @@ body {
 	margin: 0;
 	color: #333;
 	font: 12px/14px 'Open Sans', Arial, Helvetica, sans-serif;
-	background: #dddbdc url("images/bg-page.jpg") no-repeat 0 0 / 100% 100%;
+	background-image:url("images/bg-page-mobile.jpg");
+	background-repeat:no-repeat;
+	background-size:auto 100%;
+	background-position:right center;
+	background-color:#dddbdc;
 	overflow-y: scroll;
 	min-width: 320px;
 	height: 100%;
@@ -39,11 +43,11 @@ p { margin: 0 0 1.2em; }
 .w2{
 	display: table-cell;
 	vertical-align: middle;
-	padding: 88px 0 0;
+	padding:20px 0 0;
 }
 .logo-holder{
 	position: absolute;
-	top: 15%;
+	top:8%;
 	left: 0;
 	right: 0;
 }
@@ -61,13 +65,9 @@ p { margin: 0 0 1.2em; }
 	max-width: 810px;
 	margin: 0 auto;
 	text-align: left;
-	padding: 20px 0 108px;
+	padding:15px;
 	color: #222;
 	font: 24px/37px 'Open Sans', Arial, Helvetica, sans-serif;
-	transform: rotate(-4deg);
-	-ms-transform: rotate(-4deg);
-	-moz-transform: rotate(-4deg);
-	-webkit-transform: rotate(-4deg);
 }
 .text-area h1{
 	font:bold 64px/59px 'Open Sans', Arial, Helvetica, sans-serif;
@@ -107,12 +107,12 @@ p { margin: 0 0 1.2em; }
 }
 .std{height: 100%;}
 @media only screen and (max-width: 991px) {
-	.text-area{
-		padding: 20px 140px 108px;
-		font:16px/24px "Open Sans",Arial,Helvetica,sans-serif;
-	}
+	.text-area{font:16px/24px "Open Sans",Arial,Helvetica,sans-serif;}
 	.text-area h1{font: bold 50px/50px "Open Sans",Arial,Helvetica,sans-serif;}
 	.text-area p{padding: 12px 0;}
 	.link-holder{font: bold 14px/18px "Open Sans",Arial,Helvetica,sans-serif;}
 	.link-holder li {margin: 0 0 5px;}
+}
+@media (orientation:landscape) {
+body {background-image:url("images/bg-page.jpg");background-size:100% auto;}
 }
