--- a/app/design/frontend/creo_mobile/default/template/onestepcheckout/onepage/review/info.phtml
+++ b/app/design/frontend/creo_mobile/default/template/onestepcheckout/onepage/review/info.phtml
@@ -1,5 +1,10 @@
 <?php echo $this->getChildHtml('items_before'); ?>
 <div class="cart-table-area checkout-table">
+<script type="text/javascript">
+// jQuery(document).ready(function(){
+//     jQuery("#checkout-review-table").stacktable();
+// });
+</script>
     <table class="order-products-table" id="checkout-review-table" cellpadding="10" cellspacing="10">
         <?php /*?><col />
         <col width="1" />
