--- a/skin/frontend/creo/default/style.css
+++ b/skin/frontend/creo/default/style.css
@@ -2152,7 +2152,7 @@ div.fme-filter dd li{overflow: visible !important;}
 .carousel-creo.carousel4 .mask {
 	position: relative;
 	overflow: hidden;
-	/*height: 273px !important;*/
+	height:416px !important;
 }
 .carousel-creo.carousel4 .slideset {
 	width: 99999px;
@@ -5469,10 +5469,12 @@ dl {margin: 0 0 10px;}
 }
 .cate-drop-holder .cate-drop-frame:hover ul li:first-child a {border:none;}
 .carousel-creo.carousel4.trends-carousel .slide{width: 268px !important;	margin: 0 0 0 10px;}
-.carousel-creo.carousel4.trends-carousel .slide .text-area .btn-holder{visibility:hidden;}
-.carousel-creo.carousel4.trends-carousel .slide:hover .text-area .btn-holder{visibility:visible;}
+.carousel-creo.carousel4.trends-carousel .slide .list_product_img{position:relative;}
+.carousel-creo.carousel4.trends-carousel .slide .list_product_img .btn-holder{visibility:hidden;position: absolute;bottom:0;}
+.carousel-creo.carousel4.trends-carousel .slide:hover .list_product_img .btn-holder{visibility:visible;width:100%;}
 .carousel-creo.carousel4.trends-carousel{border: none;min-height:468px;}
 .carousel-creo.carousel4.trends-carousel .slide:first-child{margin: 0;}
+.carousel-creo.carousel4.trends-carousel .slide:nth-of-type(4n+4){}
 .carousel-creo.carousel4.trends-carousel .slideset{margin-right: -7px;}
 .carousel-creo.carousel4.trends-carousel .slideset::before {
     background: #fff;
