--- a/app/design/frontend/creo/default/template/extensions/collections/women.phtml
+++ b/app/design/frontend/creo/default/template/extensions/collections/women.phtml
@@ -70,6 +70,7 @@ $_helper = $this->helper('catalog/output');
             <?php $_iterator = 0; ?>
             <div class="row">
             <div class="col col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <?php /* ?>
             <h3 class="inline-h"><span>TOP TRENDS</span></h3>
             <div class="carousel-creo carousel4 trends-carousel">
             <div class="mask">
@@ -97,7 +98,7 @@ $_helper = $this->helper('catalog/output');
             </div>
             <a class="btn-prev" href="#"><i class="icon-angle-left"></i></a>
             <a class="btn-next" href="#"><i class="icon-angle-right"></i></a>
-            </div>
+            </div><?php */ ?>
             </div>
             <script type="text/javascript">decorateList('products-list', 'none-recursive')</script>
 
