--- a/app/design/frontend/creo_mobile/default/template/extensions/collections/men.phtml
+++ b/app/design/frontend/creo_mobile/default/template/extensions/collections/men.phtml
@@ -70,7 +70,7 @@ $_helper = $this->helper('catalog/output');
             <?php $_iterator = 0; ?>
             <div class="row">
             <div class="col col-lg-12 col-md-12 col-sm-12 col-xs-12">
-            <h3 class="inline-h"><span>Top Trends</span></h3>
+            <?php /* ?><h3 class="inline-h"><span>Top Trends</span></h3>
             <div class="carousel-creo carousel4 trends-carousel">
             <div class="mask">
             <div class="slideset" id="products-list">
@@ -92,7 +92,7 @@ $_helper = $this->helper('catalog/output');
             </div>
             <a class="btn-prev" href="#"><i class="icon-angle-left"></i></a>
             <a class="btn-next" href="#"><i class="icon-angle-right"></i></a>
-            </div>
+            </div><?php */ ?>
             </div>
             <script type="text/javascript">decorateList('products-list', 'none-recursive')</script>
 
