--- a/skin/frontend/creo_mobile/default/custom.css
+++ b/skin/frontend/creo_mobile/default/custom.css
@@ -733,10 +733,10 @@ padding: 0;}
 
 /*checkout_bottom_area*/
 
-.onestepcheckout-index-index .checkout_bottom_area { width:60%; float: left; text-transform: uppercase;}
-
-.onestepcheckout-index-index .checkout_bottom_area .subtotal { width: 45%; float: left;   border: 2px solid #eee;  display: block;   padding: 5px 8px;}
-.onestepcheckout-index-index .checkout_bottom_area .subtotal .title { float: left; } 
+.onestepcheckout-index-index .checkout_bottom_area { width:100%; text-transform: uppercase;}
+.onestepcheckout-index-index .checkout_bottom_area .subtotal { width:50%;float: left; border: 2px solid #eee;  display: block;
+padding: 5px 8px;}
+.onestepcheckout-index-index .checkout_bottom_area .subtotal .title { float: left; }
 .onestepcheckout-index-index .checkout_bottom_area .subtotal span { float: right; font-size:14px !important; line-height: 18px !important; font-size:14px; font-weight: normal !important ; } 
 
 .onestepcheckout-index-index .checkout_bottom_area .total { width: 45%; float: left;   border: 2px solid #eee;  display: block;   padding: 5px 8px; margin: 0 0 0 10px;}
@@ -744,8 +744,7 @@ padding: 0;}
 .onestepcheckout-index-index .checkout_bottom_area .total span { float: right; font-size:14px !important; line-height: 18px !important; font-size:14px; font-weight: normal ; } 
 
 
-
-.onestepcheckout-index-index .checkout_applyCoupon { float: right; width:30%;}
+.onestepcheckout-index-index .checkout_applyCoupon { /*float: right; width:30%;*/}
 .onestepcheckout-index-index .discount-form .leftSide { float: left; width:50%;}
 .onestepcheckout-index-index .discount-form .leftSide label, .onestepcheckout-index-index .discount-form .leftSide input { float: left; width:100%; text-align:left;}
 .onestepcheckout-index-index .discount-form .buttons-set { float: right; width:45%;}
@@ -769,9 +768,9 @@ padding: 0;}
                                      font-weight: bold;
                                      height: auto;
                                      padding: 5px 100px;
-                                     width: auto;
+                                     width:100%;
                                      float: right;
-                                     margin-top:20px;
+                                     margin-top:0px;
                                      text-transform: uppercase;
                                      border: 3px solid #ef4f61;
 }
